lib-docs/sass/pages/docs/index.sass
// Docs index
// ==================
// Generic styles that should be shared across the documentation

@import themes/default/theme

h1
  +heading-rg

h2
  +heading-xs

h3, h4, h5, h6
  +heading-xxs 

.alert
  +alert

.docs-nav
  +navbar($collapse: true, $layout: 'fluid', $background-color: map-get($colors, blue))
  margin-top: -$space

  body.fixed-nav &
    position: fixed
    top: 0
    margin-top: 0
    left: 0
    right: 0
    z-index: 10

.fixed-area
  margin-top: -$space

  @media screen and (max-width: $phablet)
    +container

  .fixed-main, .fixed-toc
    @media screen and (min-width: $phablet)
      float: left

    form.switches
      margin-bottom: $space

  .fixed-main
    @media screen and (min-width: $phablet)
      width: 50%

    @media screen and (min-width: $tablet)
      width: 75%

    @media screen and (min-width: $large-monitor)
      width: 80%

  .fixed-toc
    width: 100%
    font-size: 1rem
    line-height: 2rem

    @media screen and (max-width: $phablet)
      #toc
        background: map-get($white, darker)
        margin: ($space) (-$space)
        padding: $space

        a
          color: darken(map-get($colors, blue), 15%)
          text-decoration: underline

        &:before
          content: 'Table of Contents'
          display: block
          text-align: center
          font-weight: bold

    @media screen and (min-width: $tablet)
      +p

    a
      color: map-get($colors, blue)
      margin-bottom: $space/4
      display: block

    ul
      +list($style: 'unstyled')
      margin-bottom: 0

      > li
        margin-bottom: 0 

        > ul
          // border-left: 1px solid map-get($colors, blue)
          padding-left: $space/3
          margin-bottom: $space/3

    h1
      +heading-xs 

    @media screen and(min-width: $phablet)
      padding: $space
      width: 50%

    @media screen and (min-width: $tablet)
      width: 25%

    @media screen and (min-width: $large-monitor)
      width: 20%

  // When in fixed position
  body.fixed-nav &
    .fixed-toc 
      @media screen and (min-width: $phablet)
        position: fixed
        top: 0px
        bottom: 0
        left: 0
        right: 50%
        overflow: auto

      @media screen and (min-width: $tablet)
        right: 75%

      @media screen and (min-width: $large-monitor)
        right: 80% 

      @media screen and (min-width: $xl-monitor)
        left: calc(50vw - #{$xl-monitor/2})

      @media screen and (min-width: $xxl-monitor)
        left: calc(50vw - #{$xxl-monitor/2})

    .fixed-main
      @media screen and (min-width: $phablet)
        margin-left: 50%

      @media screen and (min-width: $tablet)
        margin-left: 25%

      @media screen and (min-width: $large-monitor)
        margin-left: 20%

.document
  margin-bottom: $space * 4

  h1, h2, h3, h4, h5, h6
    margin-top: -60px
    padding-top: 60px

  .alert, .thumbnail-content article, .modal, .modal-example
    h1:first-child
      margin-top: 0
      padding-top: 0

  .code
    background: darken(map-get($colors, blue), 40%)
    padding: $space/4 $space/2
    margin:
      left: -$space
      right: -$space

    p:first-child
      display: none

    pre
      margin-bottom: 0

  @media screen and (min-width: $phablet)
    .article, .code
      padding: $space

    .code
      margin:
        left: 0px
        right: 0px

  @media screen and (min-width: $desktop)
    display: flex
    justify-content: flex-start
    align-items: stretch
    margin:
      bottom: 0
      top: 0

    .article, .code
      width: 50%
      border-bottom: 1px solid map-get($white, darker)

    .code
      border-color: darken(map-get($colors, blue), 35%)

    .article.article-full
      width: 100%
      position: relative

      padding-right: calc(50% + #{$space})

      &:after
        content: ' '
        display: block
        position: absolute
        top: 0
        right: 0
        left: 50%
        bottom: -1px
        // background: lighten(#1d1f21, 10%)
        background: black
        border-bottom: 1px solid map-get($black, light)

.page_heading
  +page_heading

  h1
    +heading-md

    @media screen and (min-width: $phablet)
      padding-left: $space
      margin-bottom: 0

  @media screen and (min-width: $phablet)
    margin-top: $space

  @media screen and (min-width: $desktop)
    margin-bottom: 0

// Highlight JS

.hljs
  background: transparent

code, pre, kbd, samp
  &.hljs
    font-size: 0.9rem
    font-family: $mono-font-family

// Main page overrides
.main-navigation
  .svg-logo, .svg-logo-small
    fill: map-get($black, lighter)

  +navbar($collapse: true, $background-color: white)

// Optional doc blocks toggling
.if-semantic, .if-jquery
  display: none

span.ifnot-semantic, span.ifnot-jquery
  display: inline

body.show-semantic
  .ifnot-semantic
    display: none

  .if-semantic
    display: block

  span.if-semantic
    display: inline
    
body.show-jquery
  .ifnot-jquery
    display: none

  .if-jquery
    display: block

  span.if-jquery
    display: inline

.example
  margin-bottom: $space

.modal > header h1:first-child
  padding-top: 0

